Bug fixing, UI module and teacher student functionalities implemented

--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,6 +1,33 @@
-{% extends "navigation.html" %}
+{% extends "headerGeneral.html" %}
 {% block content %}
-<p>
-    Documentation of major project - Pariksha - An intelligent system for conduction and assessment of online exams
-</p>
+<div class="intro-section" id="home-section">
+        <div class="slide-1" style="background-image: url('../static/images/hero_1.jpg');" data-stellar-background-ratio="0.5">
+            <div class="container">
+                <h3 class="h4 text-black mb-4">Team Hack01</h3>
+              <div class="row align-items-center">
+                <div class="col-12">
+                  <div class="row align-items-center">
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
+                      <div class="form-box">
+                        <h3 class="h4 text-black mb-4">Vinal Bagaria</h3>
+
+                          <a class="btn btn-primary btn-pill" target="_blank" href="https://www.linkedin.com/in/vinal-bagaria/">LinkedIn</a>
+                          <a class="btn btn-primary btn-pill" target="_blank" href="https://github.com/vinalbagaria">Github</a>
+
+                    </div>
+                  </div>
+
+                    <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
+                      <div class="form-box">
+                        <h3 class="h4 text-black mb-4">Mohit Badve</h3>
+                          <a class="btn btn-primary btn-pill" target="_blank" href="https://www.linkedin.com/in/mohit-badve/">LinkedIn</a>
+                          <a class="btn btn-primary btn-pill" target="_blank" href="https://github.com/mohitbadve/">Github</a>
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
 {% endblock %}
