--- a/templates/addStudent.html
+++ b/templates/addStudent.html
@@ -1,17 +1,56 @@
 {% extends "teacherIndex.html" %}
 {% block content %}
-<form action="/addStudent/" method="post">{% csrf_token %}
-    <input type="text" name="first_name" placeholder="First Name" required>
-    <input type="text" name="last_name" placeholder="Last Name" required>
-    <input type="text" name="about_me" placeholder="Description" required>
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="email" name="email_id" placeholder="Email id" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <select name="class_id">
-        {% for class in classes %}
-        <option value="{{ class.0 }}">{{ class.1 }}</option>
-        {% endfor %}
-    </select>
-    <input type="submit" value="Add">
-</form>
+    <div class="intro-section" id="home-section">
+
+      <div class="slide-1" style="background-image: url('../static/images/hero_1.jpg');" data-stellar-background-ratio="0.5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-12">
+              <div class="row align-items-center">
+                <div class="col-lg-6 mb-4">
+                  <h1  data-aos="fade-up" data-aos-delay="100">Add a Student</h1>
+                </div>
+
+                <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="500">
+                  <form action="/addStudent/" method="post" class="form-box">{% csrf_token %}
+                    <h3 class="h4 text-black mb-4">Add a student</h3>
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="first_name" placeholder="First Name" required>
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="last_name" placeholder="Last Name" required>
+                    </div>
+                    <div class="form-group">
+                      <input type="text" class="form-control" name="about_me" placeholder="Description" required>
+                    </div>
+                  <div class="form-group">
+                      <input type="text" class="form-control" name="username" placeholder="Username" required>
+                    </div>
+                  <div class="form-group">
+                      <input type="email" class="form-control" name="email_id" placeholder="Email id" required>
+                    </div>
+                  <div class="form-group">
+                      <input type="password" class="form-control" name="password" placeholder="Password" required>
+                    </div>
+                    <div class="form-group">
+                        <select name="class_id" class="form-control">
+                            {% for class in classes %}
+                            <option value="{{ class.0 }}">{{ class.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary btn-pill" value="Add" required>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
 {% endblock %}
