--- a/templates/courseForTeachers.html
+++ b/templates/courseForTeachers.html
@@ -13,6 +13,7 @@
                   <p data-aos="" data-aos-delay="300"><a href="/viewAssignments/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">View Assignments</a></p>
                   <p data-aos="" data-aos-delay="300"><a href="/createExam/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">Create Exam</a></p>
                   <p data-aos="" data-aos-delay="300"><a href="/viewExams/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">View Exam</a></p>
+                  <p data-aos="" data-aos-delay="300"><a href="/giveAccess/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">Give Access</a></p>
 
                 </div>
 
