--- a/templates/createExam.html
+++ b/templates/createExam.html
@@ -100,6 +100,9 @@
                     <div name="mks_1"><h4>Marks</h4>
                         <input type="text" name="marks_1" onchange="setTotalMks(this)">
                     </div>
+                    <div>Course outcomes (Enter comma separated outcomes)
+                        <input type="text" name="course_outcome_1">
+                        </div>
                     </div>
                 </div>
             </form>
