--- a/templates/Test.html
+++ b/templates/Test.html
@@ -57,8 +57,26 @@
     <link rel="stylesheet" href="{% static 'css/aos.css' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+      <style>
+          .circle {
+              width: 150px;
+              height: 150px;
+              line-height: 50px;
+              border-radius: 50%;
+              font-size: 10px;
+              color: BLACK;
+              text-align: center;
+              background: #7971ea;
+          }
+      </style>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.ckeditor.com/4.14.1/standard/ckeditor.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        function myfunct(){
+            document.getElementById("stopButton").click();
+        }
+    </script>
     <script>
         var count = 0;
         $(document).ready(function () {
@@ -196,13 +214,13 @@
   </head>
   <body onload="countdown();">
     <input id = "timer" type="text" value = "{{ exam.0 }}" hidden>
-    <div style="color:#7971ea;position: absolute;left:5px">
-    Time Left ::
-        <input id="minutes" type="text" style="width: 20px;
+    <div class="circle"  style="color:#7971ea;position: absolute;left:5px">
+        <h2><input id="minutes" type="text" style="width: 60px;
                 border: none;
-                font-weight: bold; color: black; "><font size="5"> :</font>
-        <input id="seconds" type="text" style="width: 30px;
-                            border: none; font-weight: bold; color: black;">
+                font-weight: bolder; color: black; "><font size="5"> :</font>
+        <input id="seconds" type="text" style="width: 60px;
+                            border: none; font-weight: bolder; color: black;">
+            </h2>
     </div><br><br><br><br>
   <div class="site-wrap">
     <div class="site-mobile-menu site-navbar-target">
@@ -213,13 +231,33 @@
       </div>
       <div class="site-mobile-menu-body"></div>
     </div>
+      <div style="position: absolute;left:45%;top:10px"><h2 style="font-weight: bolder">{{ exam.2 }}</h2></div>
+  <div style="position: fixed;right: 0;top:10px" class="sticky-top">
+        <video class="sticky-top" id="preview" width="160" height="120" autoplay muted></video>
+        <p id="errordiv" style="color:red"></p>
+    </div>
+
+    <div class="right">
+        <button id="stopButton" style = "display: none;">
+            Stop
+        </button>
+
+        </div>
+        <video id="recording" style = "display: none;" width="160" height="120" controls></video>
+       <!--  <button id = "download"> -->
+            <a id="downloadButton" style = "display: none;" >
+        Download
+        </a>
+        <!-- </button> -->
+
+    </div>
       <div class="intro-section" id="home-section">
 
       <div  data-stellar-background-ratio="0.5">
         <div class="container">
 
             <form action="/submitTest/{{ exam_id }}" method="post" class="form-box">{% csrf_token %}
-            <p id="errordiv" style="color:red"></p>
+
           <div class="row align-items-center">
               {% for q in questions %}
                 <div class="col-lg-12 align-items-center justify-content-center text-center">
@@ -244,7 +282,7 @@
 
               {% endfor %}
            <div class="form-group">
-                      <input type="submit" class="btn btn-primary btn-pill" value="Submit">
+                    <button id="submitButton" class="btn btn-primary btn-pill">Submit</button>
                     </div>
           </div>
                 </form>
@@ -273,6 +311,111 @@
 
 
   <script src="{% static 'js/main.js' %}"></script>
+
+  <script>
+
+    let preview = document.getElementById("preview");
+    let recording = document.getElementById("recording");
+    let startButton = document.getElementById("startButton");
+    let stopButton = document.getElementById("stopButton");
+    let downloadButton = document.getElementById("downloadButton");
+    let logElement = document.getElementById("log");
+
+    let recordingTimeMS = 5000;
+
+
+    function log(msg) {
+        //logElement.innerHTML += msg + "\n";
+    }
+
+    function wait(delayInMS) {
+        return new Promise(resolve => setTimeout(resolve, delayInMS));
+    }
+
+    function startRecording(stream, lengthInMS) {
+        let recorder = new MediaRecorder(stream);
+        let data = [];
+
+        recorder.ondataavailable = event => data.push(event.data);
+        recorder.start();
+        log(recorder.state + " for " + (lengthInMS/1000) + " seconds...");
+
+        let stopped = new Promise((resolve, reject) => {
+        recorder.onstop = resolve;
+        recorder.onerror = event => reject(event.name);
+        });
+
+        let recorded = wait(lengthInMS).then(
+        () => recorder.state == "recording" && recorder.stop()
+        );
+
+        return Promise.all([
+            stopped,
+            recorded
+        ])
+        .then(() => data);
+    }
+
+    function stop(stream) {
+        stream.getTracks().forEach(track => track.stop());
+    }
+
+    // startButton.addEventListener("click", function() {
+        navigator.mediaDevices.getUserMedia({
+            video: true,
+            audio: false
+        }).then(stream => {
+                preview.srcObject = stream;
+                downloadButton.href = stream;
+                console.log(downloadButton.href);
+                preview.captureStream = preview.captureStream || preview.mozCaptureStream;
+                return new Promise(resolve => preview.onplaying = resolve);
+              })
+        .then(() => startRecording(preview.captureStream(), recordingTimeMS))
+              .then (recordedChunks => {
+                let recordedBlob = new Blob(recordedChunks, { type: "video/webm" });
+                recording.src = URL.createObjectURL(recordedBlob);
+                downloadButton.href = recording.src;
+                // var canvas = document.createElement("canvas");
+                // var context = canvas.getContext("2d");
+                // context.drawImage(recording, 0, 0); // i assume that img.src is your blob url
+                // var dataurl = canvas.toDataURL('image/webp');
+                // console.log(dataurl);
+
+                downloadButton.download = "RecordedVideo.webm";
+
+                console.log("Successfully recorded " + recordedBlob.size + " bytes of " +
+                    recordedBlob.type + " media.");
+                log("Successfully recorded " + recordedBlob.size + " bytes of " +
+                    recordedBlob.type + " media.");
+                var xhr = new XMLHttpRequest;
+                xhr.responseType = 'blob';
+
+                xhr.onload = function() {
+                   var recoveredBlob = xhr.response;
+
+                   var reader = new FileReader;
+
+                   reader.onload = function() {
+                     var blobAsDataUrl = reader.result;
+                     window.location = blobAsDataUrl;
+                   };
+
+                   reader.readAsDataURL(recoveredBlob);
+                };
+
+                xhr.open('GET', recording.src);
+                xhr.send();
+              })
+              .catch(log);
+        // }, false);
+
+
+        stopButton.addEventListener("click", function() {
+        stop(preview.srcObject);
+        }, false);
+
+    </script>
 
   </body>
 </html>
