--- a/templates/courseForTeachers.html
+++ b/templates/courseForTeachers.html
@@ -9,6 +9,7 @@
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
                   <h1  data-aos="fade-up" data-aos-delay="100">{{ course.0 }}</h1>
+                  <p data-aos="" data-aos-delay="300"><a href="/analyticsForTeacher/" class="btn btn-primary py-3 px-5 btn-pill">View Analysis</a></p>
                   <p data-aos="" data-aos-delay="300"><a href="/createAssignment/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">Create Assignment</a></p>
                   <p data-aos="" data-aos-delay="300"><a href="/viewAssignments/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">View Assignments</a></p>
                   <p data-aos="" data-aos-delay="300"><a href="/createExam/{{ course.4 }}" class="btn btn-primary py-3 px-5 btn-pill">Create Exam</a></p>
