--- a/templates/createExam.html
+++ b/templates/createExam.html
@@ -77,8 +77,8 @@
 
                 <div id="question_layout" style="display: none" class="form-box">
                     <h3>Exam Questions</h3>
-                    No.of Questions - <input type="number" name="no_of_questions" value="1" readonly><br>
-                    Total Marks - <input type="number" name="total_marks" value="0" readonly><br><br>
+                    No.of Questions - <input style="border: none" type="number" name="no_of_questions" value="1" readonly><br>
+                    Total Marks - <input style="border: none" type="number" name="total_marks" value="0" readonly><br><br>
 
                     <button type="button"  class="btn btn-primary btn-pill" onclick="addQuestion()">Add Question</button>
                     <input type="submit"  class="btn btn-primary btn-pill"><br><br><br><br>
