--- a/templates/demo.html
+++ b/templates/demo.html
@@ -5,7 +5,7 @@
      <div class="intro-section" id="home-section">
          <div class="slide-1" style="background-image: url('../static/images/hero_1.jpg');" data-stellar-background-ratio="0.5">
             <video  style="width:100%; height:600px; position:relative; top:120px ;border:0;" controls>
-                <source src="{% static 'demo/Demo.mp4' %}" type="video/mp4">
+                <source src="{% static 'demo/Eduthon_Fast.mp4' %}" type="video/mp4">
             </video>
          </div>
      </div>
