--- a/templates/paperNotChecked.html
+++ b/templates/paperNotChecked.html
@@ -47,8 +47,7 @@
             <div class="col-12">
               <div class="row align-items-center">
                 <div class="col-lg-6 mb-4">
-                  <h1 style="color: #7971ea" data-aos="fade-up" data-aos-delay="100">Your test was submitted successfully</h1>
-                  <p class="mb-4"  data-aos="fade-up" data-aos-delay="200">The event was successful.</p>
+                  <h1 style="color: #7971ea" data-aos="fade-up" data-aos-delay="100">Your paper is not checked yet</h1>
                 </div>
 
 
