--- a/templates/studentIndex.html
+++ b/templates/studentIndex.html
@@ -77,6 +77,7 @@
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu main-menu js-clone-nav mx-auto d-none d-lg-block  m-0 p-0">
                 <li><a href="/login/" class="nav-link"><span style="color: BLACK">Home</span></a></li>
+                <li><a href="/progressAnalysis/" class="nav-link"><span style="color: BLACK">View Progress Analysis</span></a></li>
               </ul>
             </nav>
           </div>
@@ -112,6 +113,7 @@
                     <span class="course-price">{{ course.1 }}</span>
                     <h3><a href="/courseForStudents/{{ course.3 }}">{{ course.0 }}</a></h3>
                     <p>Description:<br>{{ course.2 }}</p>
+                    <p><br><a href="/forum/{{ course.3 }}">Forum Link</a></p>
                   </div>
                 </div>
                 </div>
