--- a/templates/teacherIndex.html
+++ b/templates/teacherIndex.html
@@ -315,6 +315,7 @@
                   <li><a href="/createClass/" class="nav-link"><span style="color: BLACK">Create Class</span></a></li>
                   <li><a href="/createCourse/" class="nav-link"><span style="color: BLACK">Create Course</span></a></li>
                   <li><a href="/addStudent/" class="nav-link"><span style="color: BLACK">Add Student</span></a></li>
+
               </ul>
             </nav>
           </div>
@@ -351,6 +352,7 @@
                     <div class="meta">Incharge: {{ course.1 }}</div>
                     <h3><a href="/courseForTeachers/{{ course.4 }}">{{ course.0 }}</a></h3>
                     <p>Description:<br>{{ course.3 }}</p>
+                    <p><br><a href="/forum/{{ course.4 }}">Forum Link</a></p>
 
                   </div>
 
