--- a/templates/viewResults.html
+++ b/templates/viewResults.html
@@ -59,7 +59,7 @@
 
             </div>
             <b style="color: #7971ea">Total Obtained Marks: <span style="color: BLACK">{{ obtainedtotal }}</span> out of <span style="color: BLACK">{{ total }}</span></b><br><br><br>
-                <a class="btn btn-primary btn-pill" href = "/viewAnalysis/">View Analysis</a>
+                <a class="btn btn-primary btn-pill" href = "/viewAnalysis/{{ exam_id }}">View Analysis</a>
         </div>
         </div>
       </div>
