--- a/templates/showResponses.html
+++ b/templates/showResponses.html
@@ -39,7 +39,7 @@
       <div  data-stellar-background-ratio="0.5">
         <div class="container">
 
-            <form action="/gradeManual/{{ exam_id }}-{{ student_id }}-{{ no_of_questions }}" method="post" class="form-box">{% csrf_token %}
+            <form action="/gradeManual/{{ exam_id }}-{{ student_id }}" method="post" class="form-box">{% csrf_token %}
           <div class="row align-items-center">
              {% for q in questions %}
                 <div class="col-lg-12 form-box">
